--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
     <h1>I'm Mohamud Mohamed</h1>
     <img src="./Mohamudcade.jpeg" height="200px" alt="My Picture" />
     <h2>Summary</h2>
-    <h3>Greetings! I am Mohamud, a dedicated web developer with a background in software engineering</h3>
+    <p>Greetings! I am Mohamud, a dedicated web developer with a background in software engineering</p>
     <h2>Qualification/Education</h2>
+    <ul><li>Certification, Microverse - 2022-2023
+    </li><li>Certification, NRC Training-2020-2021</li></ul>
     <h2>Work Experience</h2>
+    <ul><li>Front-end developer, HetroShare Inc.- to present</li></ul>
+    <!--list job titles, employers, dates, and responsibilities-->
 </body>
 </html>
